--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "normalizr": "^3.6.2",
     "socket.io": "^4.5.1"
   }
